--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,18 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.airbnb.android:lottie:3.7.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.fragment:fragment-ktx:1.3.5'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+
+
+
+
 
 }
